--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            <h1>Cabecera</h1>
+        </div>
         <div id="post">
             <h1>post title</h1>
             <p>This is a paragraph about the post</p>
