Agregando parrafo y tipografia

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>post title</h1>
             <p>This is a paragraph about the post</p>
+            <p>agregando parrafo cualquiera</p>
         </div>
     </div>
     
